--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,5 +56,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "Project A Official.sln"
+    "dotnet.defaultSolution": "THE-OFFICIAL-PROJECT-A.sln"
 }
